# MuddisSpielplanPlaner

./: .gitattributes  .gitignore  DataAPI.py  DataAPITest.py  DatabaseHandler.py  DatabaseHandlerTest.py  GameState.py  GraphRating.py  GraphRatingTest.py  Main.py  MatchUpGenerator.py  RankingGenerator.py  RankingGeneratorTest.py  ScoreboardDescriptionClasses.py  States.py  SwissGameScheduler.py  TeamDecriptionClasses.py  TournamentDescriptionClasses.py  examine.py  optimalRankingParams.txt  rankingGeneratorEval.py  scoreboardDescriptionClasses.py  updateDB.py
cpp/: CMakeLists.txt  RankingGenerator.cpp  RankingGenerator.h  RankingGenerator.i  RankingGeneratorCpp.i  main.cpp
includes/: config.example.ini  config.ini
integration_test/: DBGenerator.py  ResultEntrySimulator.py  setupDB.sql
testData/: previousMatches.csv  results.csv
testData/fifth_round/: ranking.txt  results.csv
testData/first_round/: futureMatchUps.csv  schedule.txt
testData/fourth_round/: futureSlots.csv  previousMatches.csv  ranking.txt  results.csv  resultswithoutresults.csv  schedule.txt
testData/fourth_round/final/: ranking.txt  results.csv
testData/second_round/: futureMatchUps.csv  futureSlots.csv  previousMatches.csv  results.csv  schedule.txt
testData/second_round/final/: ranking.txt  results.csv
testData/third_round/: futureSlots.csv  previousMatches.csv  ranking.txt  results.csv  schedule.txt
testData/third_round/final/: ranking.txt  results.csv
